syntax = "proto3";
package pb;

option go_package = "./pb;pb";

// 解析token
message ParseToken{
  string user_id = 1;
}
message InvalidateToken{
}

// 设置用户在线状态
message SetUserOnlineStatusReq {
  repeated UserOnlineStatus status = 1;
}
message UserOnlineStatus {
  string user_id = 1;
  string conn_id = 2;
  repeated int32 online = 3;
  repeated int32 offline = 4;
}
